# otodom_tg_bot

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/bot/: appartment.py  start.py
src/db/: __init__.py  models.py
src/scrapper/: scrap_new_appartments.py  scrap_places.py
